# japanese-duolingo-visualizer

./: .gitignore  LICENSE  README.md  duolingo-progress.json  index.html  main.py  pyproject.toml
.github/workflows/: python.yml  run.yml
data/: duolingo-progress.json  statistics.json
scripts/: migration-20230805.py  migration-20240620.py  migration.py
src/: api.py  database.py  duolingo.py  schema.py  store.py  synchronizer.py
tests/: api_test.py  database_test.py  duolingo_test.py  store_test.py  synchronizer_test.py
web/: index.html
