[tool.poetry]
name = "japanese-duolingo-visualizer"
version = "1.0.0"
description = "Visualize your Japanese learning process with the help of Duolingo's API"
authors = ["lauslim12 <31909304+lauslim12@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lauslim12/japanese-duolingo-visualizer"
repository = "https://github.com/lauslim12/japanese-duolingo-visualizer"
documentation = "https://github.com/lauslim12/japanese-duolingo-visualizer"
keywords = [
  "automation",
  "duolingo",
  "github-actions",
  "http",
  "visualizer",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation",
  "Topic :: Database",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.1"
pydantic = "^2.7.4"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"
pytest = "^7.1.2"
pytest-mock = "^3.8.2"
requests-mock = "^1.9.3"
types-requests = "^2.28.7"
pytest-cov = "^3.0.0"

[tool.black]
exclude = 'venv*'

[tool.isort]
profile = "black"
line_length = "88"
multi_line_output = "3"
include_trailing_comma = "True"
src_paths = ["src"]

[tool.mypy]
strict = "True"
files = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
