[tool.poetry]
name = "japanese-duolingo-visualizer"
version = "1.0.0"
description = "Visualize your Japanese learning process with the help of Duolingo's API"
authors = ["lauslim12 <31909304+lauslim12@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false
homepage = "https://github.com/lauslim12/japanese-duolingo-visualizer"
repository = "https://github.com/lauslim12/japanese-duolingo-visualizer"
documentation = "https://github.com/lauslim12/japanese-duolingo-visualizer"
keywords = [
  "automation",
  "duolingo",
  "github-actions",
  "http",
  "visualizer",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation",
  "Topic :: Database",
  "Topic :: Education",
  "Topic :: Internet",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
pytest = "^8.2.2"
requests-mock = "^1.12.1"
types-requests = "^2.32.0.20240602"
pytest-cov = "^5.0.0"
ruff = "^0.4.9"

[tool.mypy]
strict = "True"
files = ["src"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
